Bug 2052949 - Fire load/error event for a modulepreload whose module is fetching, fetched or cached. r=jonco,dom-core-reviewers,edgar,arai

A <link rel=modulepreload> whose module is already in the module map, or comes
from the in-memory navigation cache, is satisfied without opening a channel.
Registration with the PreloadService happens in StartLoadInternal, which isn't
reached in those cases, so PreloadService::PreloadOrCoalesce finds no preloader
for the element and a spurious error event is fired.

Register such a request in ScriptLoader::PreloadURI instead, identifying it by
having no channel, and report the top-level module's result from
ScriptLoadContext::NotifyPreloadCoalescingResult: load once the module has been
fetched, even with a parse error, error once the fetch has failed or been
canceled, and nothing while it is still fetching - ModuleLoaderBase notifies
again when the fetch it coalesced onto finishes or is dropped. As the
modulepreload spec requires, this happens before the module's dependencies.

The coalesced state is flagged on the ScriptLoadContext instead of being derived
from the eLinkPreload script mode, which a <script> element stealing the preload
clears while the element still needs its event.

Add WPTs for the module map states, for firing before dependencies and for a
preload consumed by a <script> element, and a mochitest for the memory cache.

Differential Revision: https://phabricator.services.mozilla.com/D311782